--- a/index.html
+++ b/index.html
@@ -4,7 +4,35 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>RJ Papad — Demo Wallet</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+:root{--bg:#fff8e1;--accent:#b30000;--muted:#6b7280}
+*{box-sizing:border-box}
+body{margin:0;font-family:Inter,Arial,Helvetica,sans-serif;background:var(--bg);color:#111}
+.container{max-width:980px;margin:16px auto;padding:12px}
+.site-header{background:var(--accent);color:#fff;padding:12px}
+.brand{display:flex;align-items:center;gap:12px}
+.logo{height:64px;border-radius:8px;background:#fff;padding:4px}
+.brand-title{font-weight:800;font-size:20px}
+.brand-sub{font-size:12px;opacity:0.9}
+.card{background:#fff;padding:14px;border-radius:10px;box-shadow:0 6px 16px rgba(0,0,0,0.06);margin-bottom:12px}
+input,select,textarea{width:100%;padding:10px;margin:8px 0;border-radius:8px;border:1px solid #ddd}
+.btn{padding:10px 12px;border-radius:8px;border:0;background:var(--accent);color:#fff;cursor:pointer}
+.row{display:flex;gap:8px}
+.row > *{flex:1}
+.hidden{display:none}
+.notice{background:#f3f4f6;padding:8px;border-radius:8px;color:var(--muted);margin-top:8px}
+.small{font-size:13px;color:var(--muted)}
+.menu-bar{position:fixed;bottom:0;left:0;right:0;background:#fff3cd;border-top:2px solid #ffc107;display:flex;justify-content:space-around;padding:10px 0}
+.menu-bar button{background:none;border:0;font-size:22px}
+.balance{font-size:24px;font-weight:800;margin-top:6px}
+.mlm-tree{max-height:320px;overflow:auto;padding:8px;border-radius:8px;background:#f8fafc}
+.list{padding-left:14px}
+.next-level-box{background:#fff3e0;padding:10px;border-radius:8px;border:1px solid #ffd7a8;margin-top:8px}
+.section{margin-top:12px}
+.dash-top{display:flex;justify-content:space-between;align-items:center}
+.dash-actions{display:flex;gap:8px}
+@media(min-width:900px){ .menu-bar{display:none} }
+  </style>
 </head>
 <body>
   <header class="site-header">
